Web page white space fix

--- a/Fallback/fallback.css
+++ b/Fallback/fallback.css
@@ -1,3 +1,5 @@
+body, html, * { padding: 0; margin: 0}
+
 .container{
     display: grid;
     grid-template-columns: 16rem 1fr 16rem;
@@ -23,7 +25,7 @@ main{
 @media(max-width: 1024px) {
     .container {
         grid-template-columns: 1fr;
-        grid-template-rows: auto 1fr; 
+        grid-template-rows: auto 1fr;
         grid-template-areas: 
         "header"
         "main";
